[package]
name = "ruplace"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
repository = "https://github.com/Diggsey/ruplace"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = "0.5.0"
serde_json = "0.9.9"
hyper = "0.10.5"
serde_derive = "0.9"
serde = "0.9"
png = "0.6.2"
rand = "0.3.15"
